--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
    <parent>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-parent</artifactId>
-      <version>5.1.0.CR2</version>
+      <version>7.1.0.Final</version>
    </parent>
 
    <!-- This module declares components that either has lifecycle (@Start or @Stop) or uses @Inject to retrieve dependencies -->
@@ -26,6 +26,12 @@
          <artifactId>infinispan-core</artifactId>
          <version>${project.version}</version>
       </dependency>
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>infinispan-core</artifactId>
+         <type>test-jar</type>
+         <scope>test</scope>
+       </dependency>
    </dependencies>
 
 </project>
